--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
 
 
-        <section class="hero-sect" >
+        <section class="hero-sect sect-padding" >
             <div class="container">
                 <h1 class="hero-title">
                     Effective Solutions for Your Business
@@ -65,9 +65,9 @@
 
 
 
-        <section class="sect-benf">
+        <section class="sect-benf sect-padding">
             <div class="container">
-                <h2 class="benf-title">Benefits</h2>
+                <h2 class="visually-hidden">Benefits</h2>
                 <ul class="benf-menu">
                     <li class="benf-menu-item">
                         <h3 class="benf-header">Strategy</h3>
@@ -158,7 +158,7 @@
 
 
 
-        <section class="sect-padding">
+        <section class="port-sect sect-padding">
             <div class="container">
                 <h2 class="portf-header title">Our Portfolio</h2>
                 <ul class="portf-menu">
