--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section class="sect-padding t-sect">
             <div class="container">
               <h2 class="t-header title">Our Team</h2>
-              <ul class="main-t-menu">
+              <ul class="main-t-menu list-team">
                 <li class="t-menu">
                     <img class="t-menu-img"
                      src="./images/img-3.jpg"
@@ -240,7 +240,7 @@
 
     <footer class="footer-sect">
         <div class="container">
-            <a href="./index.html" class="logo">Web
+            <a href="./index.html" class="logo f-logo">Web
                 <span class="footer-logo-part">Studio</span>
             </a>
             <p class="footer-content">
