--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header-bord">
 
       
-        <div class="container header-conteainer">
+        <div class="container header-container">
           <nav class="navig">
             <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
             <ul class="nav-page-menu">
@@ -34,10 +34,10 @@
             </ul>
             <address class="address">
                     <ul class="address-menu">
-                        <li>
+                        <li class="adr-cont">
                             <a href="mailto:info@devstudio.com" class="addr-links">info@devstudio.com</a>
                         </li>
-                        <li>
+                        <li class="adr-cont">
                             <a href="tel:+110001111111" class="addr-links">+11 (000) 111-11-11</a>
                         </li>
                     </ul>
