--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
 
     <footer class="footer-sect">
         <div class="container">
-            <a href="./index.html" class="logo f-logo">Web
-                <span class="footer-logo-part">Studio</span>
+            <a href="./index.html" class="logo f-logo">Web<span class="footer-logo-part">Studio</span>
             </a>
             <p class="footer-content">
                 Increase the flow of customers and sales for your
