--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
         <section class="sect-padding t-sect">
-            <div class="container">
+            <div class="container t-container">
               <h2 class="t-header title">Our Team</h2>
               <ul class="main-t-menu list-team">
                 <li class="t-menu">
