--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
 
         <section class="sect-padding t-sect">
-            <div class="container t-container">
-              <h2 class="t-header title">Our Team</h2>
+            <div class="container ">
+              <h2 class="t-header ">Our Team</h2>
               <ul class="main-t-menu list-team">
                 <li class="t-menu">
                     <img class="t-menu-img"
@@ -161,7 +161,7 @@
 
         <section class="port-sect sect-padding">
             <div class="container">
-                <h2 class="portf-header title">Our Portfolio</h2>
+                <h2 class="portf-header ">Our Portfolio</h2>
                 <ul class="portf-menu">
                     <li class="portf-menu-item">
                         <img src="./images/img21.jpg"
