--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <section class="sect-padding t-sect">
             <div class="container ">
               <h2 class="t-header ">Our Team</h2>
-              <ul class="main-t-menu list-team">
+              <ul class="main-t-menu">
                 <li class="t-menu">
                     <img class="t-menu-img"
                      src="./images/img-3.jpg"
